# coderd/apidoc/swagger.json
@@ -9831,12 +9831,12 @@
         "level": {
           "$ref": "#/definitions/codersdk.LogLevel"
         },
-        "log_source_id": {
-          "type": "string",
-          "format": "uuid"
-        },
         "output": {
           "type": "string"
+        },
+        "source_id": {
+          "type": "string",
+          "format": "uuid"
         }
       }
     },
